--- a/404.html
+++ b/404.html
@@ -70,11 +70,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.CZSYdh-0.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.Jmv-Gx2Q.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BE5AvQKw.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CGtv-R76.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.DjiPo3H_.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.4e1ancKm.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.RpwSgWly.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.B8h_1Cl_.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.BX_fekq_.js">
 </head>
 
@@ -82,15 +82,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_hpijem = {
+					__sveltekit_v33g53 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.CZSYdh-0.js"),
-						import("/_app/immutable/entry/app.RpwSgWly.js")
+						import("/_app/immutable/entry/start.BE5AvQKw.js"),
+						import("/_app/immutable/entry/app.B8h_1Cl_.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
