--- a/404.html
+++ b/404.html
@@ -70,11 +70,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.eBYub-D-.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CutwyTwf.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.CLHTT78-.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.0kpAyoHH.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.DjiPo3H_.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.4e1ancKm.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CA1seO1C.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.C_OBKJ55.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.BX_fekq_.js">
 </head>
 
@@ -82,15 +82,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_19iiwr5 = {
+					__sveltekit_cgxmz4 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.eBYub-D-.js"),
-						import("/_app/immutable/entry/app.CA1seO1C.js")
+						import("/_app/immutable/entry/start.CLHTT78-.js"),
+						import("/_app/immutable/entry/app.C_OBKJ55.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
