--- a/index.html
+++ b/index.html
@@ -70,22 +70,22 @@
 	</script>
 
 	
-		<link href="./_app/immutable/assets/0.CBqqcZo2.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.BaGwBwgz.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/index.CV-KWLNP.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Toaster.DKF17Rty.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.eBYub-D-.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CutwyTwf.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CLHTT78-.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.0kpAyoHH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.DjiPo3H_.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.4e1ancKm.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CA1seO1C.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.C_OBKJ55.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.BX_fekq_.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DX7sViVn.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DZCKk_Ny.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/language.CLV-v9o_.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CKUDrZXC.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Logo.BaIFmSO0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CSIRoAvY.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Logo.M_5zba5Z.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.BN1NQ2jE.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Toaster.svelte_svelte_type_style_lang.0p6MPxnL.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.u85hu-2Q.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.Cm2Wax7R.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/fetchTableData.Bh_OBVkK.js">
 </head>
 
@@ -98,11 +98,11 @@ overflow: hidden;
 clip: rect(0, 0, 0, 0);
 white-space: nowrap;
 border-width: 0;
-transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]--><!----> <!--[!--><!--]--></div> <!--[!--><!--]--></div> <!--[!--><!--[!--><!--[!--><!--[--><!--[!--><!--]--> <!----><div class="[&amp;>svg]:text-foreground relative rounded-lg border px-4 py-3 text-sm [&amp;>svg]:absolute [&amp;>svg]:left-4 [&amp;>svg]:top-4 [&amp;>svg~*]:pl-7 bg-background text-foreground md:1/2 my-1 w-full md:w-[512px]" role="alert"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide-icon lucide lucide-sticker size-8"><!--[--><!----><path  d="M15.5 3H5a2 2 0 0 0-2 2v14c0 1.1.9 2 2 2h14a2 2 0 0 0 2-2V8.5L15.5 3Z"><!----></path><!----><!----><path  d="M14 3v4a2 2 0 0 0 2 2h4"><!----></path><!----><!----><path  d="M8 13h.01"><!----></path><!----><!----><path  d="M16 13h.01"><!----></path><!----><!----><path  d="M10 16s.8 1 2 1c1.3 0 2-1 2-1"><!----></path><!----><!--]--><!----><!----><!----><!----></svg><!----> <!----><div aria-level="5" class="mb-1 font-medium leading-none tracking-tight !pl-12"><!--[!-->Best Thanks to the <a class="font-semibold hover:underline" href="https://ma.cyou/">Author</a><!--]--><!----></div><!----> <!----><div class="text-sm [&amp;_p]:leading-relaxed !pl-12"><!--[!-->is a subscription on <a class="font-semibold hover:underline" href="https://github.com/Mapagmataas1331">GitHub</a> and a star on <a class="font-semibold hover:underline" href="https://github.com/Mapagmataas1331/ma">Repository</a><!--]--><!----></div><!----><!----></div><!----><!--]--><!--]--><!--]--><!--]--></div><!----><!----> <footer class="flex flex-col items-center justify-between gap-1 p-2 pb-3 text-xs text-muted-foreground md:flex-row md:gap-3 md:px-4 md:py-3"><div>© <a class="hover:text-foreground" href="https://ma.cyou/" target="_blank">ma.cyou</a> (<a class="hover:text-foreground" href="https://github.com/mapagmataas1331/" target="_blank">Mapagmataas</a>) 2023 - 2024</div> <div class="flex gap-2"><!--[--><a href="https://ma.cyou/" class="hover:text-foreground">Author</a> <!--[--><!----><!--[!--><div class="shrink-0 min-h-full w-[1px] bg-muted-foreground bg-opacity-50" id="bits-6" role="separator" aria-orientation="vertical" data-orientation="vertical" data-separator-root=""><!----></div><!--]--><!----><!--]--><a href="https://opencollege-nsk.ru/" class="hover:text-foreground">NGOK's site</a> <!--[--><!----><!--[!--><div class="shrink-0 min-h-full w-[1px] bg-muted-foreground bg-opacity-50" id="bits-7" role="separator" aria-orientation="vertical" data-orientation="vertical" data-separator-root=""><!----></div><!--]--><!----><!--]--><a href="https://docs.google.com/spreadsheets/d/1FiMov0r4UUDKT6A56NWMImpoUakDC2YDevgaOpJQ7Qc/" class="hover:text-foreground">Schedule table</a> <!--[--><!----><!--[!--><div class="shrink-0 min-h-full w-[1px] bg-muted-foreground bg-opacity-50" id="bits-8" role="separator" aria-orientation="vertical" data-orientation="vertical" data-separator-root=""><!----></div><!--]--><!----><!--]--><a href="https://github.com/Mapagmataas1331/NGOK-Better-schedule" class="hover:text-foreground">Source code</a> <!--[!--><!--]--><!--]--></div></footer><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]--><!----> <!--[!--><!--]--></div> <!--[!--><!--]--></div> <!--[!--><!--[!--><!--[!--><!--[--><!--[!--><!--]--> <!----><div class="[&amp;>svg]:text-foreground relative rounded-lg border px-4 py-3 text-sm [&amp;>svg]:absolute [&amp;>svg]:left-4 [&amp;>svg]:top-4 [&amp;>svg~*]:pl-7 bg-background text-foreground md:1/2 my-1 w-full md:w-[512px]" role="alert"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide-icon lucide lucide-sticker size-8"><!--[--><!----><path  d="M15.5 3H5a2 2 0 0 0-2 2v14c0 1.1.9 2 2 2h14a2 2 0 0 0 2-2V8.5L15.5 3Z"><!----></path><!----><!----><path  d="M14 3v4a2 2 0 0 0 2 2h4"><!----></path><!----><!----><path  d="M8 13h.01"><!----></path><!----><!----><path  d="M16 13h.01"><!----></path><!----><!----><path  d="M10 16s.8 1 2 1c1.3 0 2-1 2-1"><!----></path><!----><!--]--><!----><!----><!----><!----></svg><!----> <!----><div aria-level="5" class="mb-1 font-medium leading-none tracking-tight !pl-12"><!--[!-->Best Thanks to the <a class="font-semibold hover:underline" href="https://ma.cyou/">Author</a><!--]--><!----></div><!----> <!----><div class="text-sm [&amp;_p]:leading-relaxed !pl-12"><!--[!-->is a subscription on <a class="font-semibold hover:underline" href="https://github.com/Mapagmataas1331">GitHub</a> and a star on <a class="font-semibold hover:underline" href="https://github.com/Mapagmataas1331/ma">Repository</a><!--]--><!----></div><!----><!----></div><!----><!--]--><!--]--><!--]--><!--]--></div><!----><!----> <footer class="flex flex-col items-center justify-between gap-1 p-2 pb-3 text-xs text-muted-foreground md:flex-row md:gap-3 md:px-4 md:py-3"><div>© <a class="hover:text-foreground" href="https://ma.cyou/" target="_blank">ma.cyou</a> (<a class="hover:text-foreground" href="https://github.com/mapagmataas1331/" target="_blank">Mapagmataas</a>) 2023 - 2024</div> <div class="flex gap-1 sm:gap-2"><!--[--><a href="https://ma.cyou/" class="hover:text-foreground">Author</a> <!--[--><!----><!--[!--><div class="shrink-0 min-h-full w-[1px] bg-muted-foreground bg-opacity-50" id="bits-6" role="separator" aria-orientation="vertical" data-orientation="vertical" data-separator-root=""><!----></div><!--]--><!----><!--]--><a href="https://opencollege-nsk.ru/" class="hover:text-foreground">NGOK's site</a> <!--[--><!----><!--[!--><div class="shrink-0 min-h-full w-[1px] bg-muted-foreground bg-opacity-50" id="bits-7" role="separator" aria-orientation="vertical" data-orientation="vertical" data-separator-root=""><!----></div><!--]--><!----><!--]--><a href="https://docs.google.com/spreadsheets/d/1FiMov0r4UUDKT6A56NWMImpoUakDC2YDevgaOpJQ7Qc/" class="hover:text-foreground">Schedule table</a> <!--[--><!----><!--[!--><div class="shrink-0 min-h-full w-[1px] bg-muted-foreground bg-opacity-50" id="bits-8" role="separator" aria-orientation="vertical" data-orientation="vertical" data-separator-root=""><!----></div><!--]--><!----><!--]--><a href="https://github.com/Mapagmataas1331/NGOK-Better-schedule" class="hover:text-foreground">Source code</a> <!--[!--><!--]--><!--]--></div></footer><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_19iiwr5 = {
+					__sveltekit_cgxmz4 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -111,8 +111,8 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.eBYub-D-.js"),
-						import("./_app/immutable/entry/app.CA1seO1C.js")
+						import("./_app/immutable/entry/start.CLHTT78-.js"),
+						import("./_app/immutable/entry/app.C_OBKJ55.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
