--- a/index.html
+++ b/index.html
@@ -73,19 +73,19 @@
 		<link href="./_app/immutable/assets/0.BaGwBwgz.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/index.CV-KWLNP.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Toaster.DKF17Rty.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CLHTT78-.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.0kpAyoHH.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BcYqROyF.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.D9wfAsde.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.DjiPo3H_.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.4e1ancKm.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.C_OBKJ55.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DN56s-mb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.BX_fekq_.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DZCKk_Ny.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CN8tzYOb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/language.CLV-v9o_.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CSIRoAvY.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Logo.M_5zba5Z.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DmG48YPC.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Logo.Dbc7GLF9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.BN1NQ2jE.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Toaster.svelte_svelte_type_style_lang.0p6MPxnL.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.Cm2Wax7R.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.BBM0UudQ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/fetchTableData.Bh_OBVkK.js">
 </head>
 
@@ -102,7 +102,7 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 			
 			<script>
 				{
-					__sveltekit_cgxmz4 = {
+					__sveltekit_18hzmu3 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -111,8 +111,8 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CLHTT78-.js"),
-						import("./_app/immutable/entry/app.C_OBKJ55.js")
+						import("./_app/immutable/entry/start.BcYqROyF.js"),
+						import("./_app/immutable/entry/app.DN56s-mb.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
