--- a/404.html
+++ b/404.html
@@ -70,11 +70,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.CLHTT78-.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.0kpAyoHH.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BcYqROyF.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.D9wfAsde.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.DjiPo3H_.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.4e1ancKm.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.C_OBKJ55.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.DN56s-mb.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.BX_fekq_.js">
 </head>
 
@@ -82,15 +82,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_cgxmz4 = {
+					__sveltekit_18hzmu3 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.CLHTT78-.js"),
-						import("/_app/immutable/entry/app.C_OBKJ55.js")
+						import("/_app/immutable/entry/start.BcYqROyF.js"),
+						import("/_app/immutable/entry/app.DN56s-mb.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
