--- a/404.html
+++ b/404.html
@@ -70,27 +70,27 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BcYqROyF.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.D9wfAsde.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/utils.DjiPo3H_.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.4e1ancKm.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.DN56s-mb.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.BX_fekq_.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.CsvgP38M.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.zv7kfl8Z.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/utils.CVjiVCGq.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.C1-xVPKz.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.6tKBhNOq.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.1MAZtDoG.js">
 </head>
 
 <body data-sveltekit-preload-data="hover">
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_18hzmu3 = {
+					__sveltekit_obxqvt = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BcYqROyF.js"),
-						import("/_app/immutable/entry/app.DN56s-mb.js")
+						import("/_app/immutable/entry/start.CsvgP38M.js"),
+						import("/_app/immutable/entry/app.6tKBhNOq.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
