--- a/debug/index.html
+++ b/debug/index.html
@@ -73,20 +73,20 @@
 		<link href="../_app/immutable/assets/0.BbBiBGlH.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/index.CV-KWLNP.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/Toaster.DKF17Rty.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.CsvgP38M.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/entry.zv7kfl8Z.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.DhPzJZE8.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/entry.C6hxeOX3.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/utils.CVjiVCGq.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.C1-xVPKz.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.6tKBhNOq.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.DGp9vHZl.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/disclose-version.1MAZtDoG.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.SVWuu5nN.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/language.MI8Fri8Q.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.CpBouo6L.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/Logo.q5pmGbNC.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/index.Dngz2VRP.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/Toaster.svelte_svelte_type_style_lang.DGX1H8MU.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/3.sGsPL1uV.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/fetchTableData.BKSyU91k.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.Di9isMn4.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/language.Be74UJBu.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.BILe0_n4.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/Logo.DC1X3cZ5.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/index.BdwaoojY.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/Toaster.svelte_svelte_type_style_lang.0yDT67Bp.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/3.B1WQHa5A.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/fetchTableData.BsvhwhQ6.js">
 </head>
 
 <body data-sveltekit-preload-data="hover">
@@ -102,7 +102,7 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 			
 			<script>
 				{
-					__sveltekit_obxqvt = {
+					__sveltekit_3l7vbl = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
@@ -111,8 +111,8 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.CsvgP38M.js"),
-						import("../_app/immutable/entry/app.6tKBhNOq.js")
+						import("../_app/immutable/entry/start.DhPzJZE8.js"),
+						import("../_app/immutable/entry/app.DGp9vHZl.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
