--- a/debug/index.html
+++ b/debug/index.html
@@ -70,19 +70,19 @@
 	</script>
 
 	
-		<link href="../_app/immutable/assets/0.BbBiBGlH.css" rel="stylesheet">
+		<link href="../_app/immutable/assets/0.B9UqEcue.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/index.CV-KWLNP.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/Toaster.DKF17Rty.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.DhPzJZE8.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/entry.C6hxeOX3.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.C7Ab1BVr.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/entry.DlhramPC.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/utils.CVjiVCGq.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.C1-xVPKz.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.DGp9vHZl.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.z5jY1pZG.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/disclose-version.1MAZtDoG.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.Di9isMn4.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.CxZCUn7y.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/language.Be74UJBu.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.BILe0_n4.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/Logo.DC1X3cZ5.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.DKzW2tUB.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/Logo.CjtpXAya.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.BdwaoojY.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Toaster.svelte_svelte_type_style_lang.0yDT67Bp.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/3.B1WQHa5A.js">
@@ -102,7 +102,7 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 			
 			<script>
 				{
-					__sveltekit_3l7vbl = {
+					__sveltekit_3ncclb = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
@@ -111,8 +111,8 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.DhPzJZE8.js"),
-						import("../_app/immutable/entry/app.DGp9vHZl.js")
+						import("../_app/immutable/entry/start.C7Ab1BVr.js"),
+						import("../_app/immutable/entry/app.z5jY1pZG.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
