--- a/404.html
+++ b/404.html
@@ -70,11 +70,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.C7Ab1BVr.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DlhramPC.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.nc-dX2D7.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DYpM8yI_.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.CVjiVCGq.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.C1-xVPKz.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.z5jY1pZG.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.CEG5u3iL.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.1MAZtDoG.js">
 </head>
 
@@ -82,15 +82,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_3ncclb = {
+					__sveltekit_5k2pxt = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.C7Ab1BVr.js"),
-						import("/_app/immutable/entry/app.z5jY1pZG.js")
+						import("/_app/immutable/entry/start.nc-dX2D7.js"),
+						import("/_app/immutable/entry/app.CEG5u3iL.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
