--- a/404.html
+++ b/404.html
@@ -70,11 +70,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.B1_Q_kZr.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CDZZ69ko.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.LZL8XqtZ.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.B6hrdvpy.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.CVjiVCGq.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.C1-xVPKz.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.DKXgmFid.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.DCAOYvH4.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.1MAZtDoG.js">
 </head>
 
@@ -82,15 +82,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_11bu1ju = {
+					__sveltekit_1uy9yqb = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.B1_Q_kZr.js"),
-						import("/_app/immutable/entry/app.DKXgmFid.js")
+						import("/_app/immutable/entry/start.LZL8XqtZ.js"),
+						import("/_app/immutable/entry/app.DCAOYvH4.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
