--- a/index.html
+++ b/index.html
@@ -73,19 +73,19 @@
 		<link href="./_app/immutable/assets/0.B9UqEcue.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/index.CV-KWLNP.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Toaster.DKF17Rty.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.B1_Q_kZr.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CDZZ69ko.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.LZL8XqtZ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.B6hrdvpy.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.CVjiVCGq.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.C1-xVPKz.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DKXgmFid.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DCAOYvH4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.1MAZtDoG.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.B3O7J5S8.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BCXFar5X.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/language.BJMII6r1.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.D84vRTIo.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Logo.DDpqDZ5W.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.D_wJeCiD.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Logo.BYNmSUXR.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.BUTmABTT.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Toaster.svelte_svelte_type_style_lang.DCI050Q_.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.LDNT-Vd4.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.1Dorwspx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/chevron-left.Dz3lqHkJ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/fetchTableData.Dq7AT3el.js">
 </head>
@@ -103,7 +103,7 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 			
 			<script>
 				{
-					__sveltekit_11bu1ju = {
+					__sveltekit_1uy9yqb = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -112,8 +112,8 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.B1_Q_kZr.js"),
-						import("./_app/immutable/entry/app.DKXgmFid.js")
+						import("./_app/immutable/entry/start.LZL8XqtZ.js"),
+						import("./_app/immutable/entry/app.DCAOYvH4.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
