--- a/404.html
+++ b/404.html
@@ -70,27 +70,27 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.LZL8XqtZ.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.B6hrdvpy.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/utils.CVjiVCGq.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.C1-xVPKz.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.DCAOYvH4.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.1MAZtDoG.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DBK55itP.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.aCKmmETx.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/utils.DuFowCKh.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.D2ixOpOH.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.CWOPaAv5.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.CbSI49Dz.js">
 </head>
 
 <body data-sveltekit-preload-data="hover">
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_1uy9yqb = {
+					__sveltekit_4hrav = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.LZL8XqtZ.js"),
-						import("/_app/immutable/entry/app.DCAOYvH4.js")
+						import("/_app/immutable/entry/start.DBK55itP.js"),
+						import("/_app/immutable/entry/app.CWOPaAv5.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
