--- a/debug/index.html
+++ b/debug/index.html
@@ -73,16 +73,16 @@
 		<link href="../_app/immutable/assets/0.B9UqEcue.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/index.CV-KWLNP.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/Toaster.DKF17Rty.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.DBK55itP.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/entry.aCKmmETx.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.C9Y7Fz64.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/entry.ZgdasEvG.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/utils.DuFowCKh.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.D2ixOpOH.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.CWOPaAv5.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.DoJl_UdN.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/disclose-version.CbSI49Dz.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.B-yTFsiE.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.CbyAYa5d.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/language.Dl3xRKFZ.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.CFKibqGB.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/Logo.COCyKUwt.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.CiD0Xj7o.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/Logo.W6KALgy-.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.BPIpKGWN.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Toaster.svelte_svelte_type_style_lang.C08CAFJi.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/3.hYo83G5C.js">
@@ -102,7 +102,7 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 			
 			<script>
 				{
-					__sveltekit_4hrav = {
+					__sveltekit_1ntek63 = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
@@ -111,8 +111,8 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.DBK55itP.js"),
-						import("../_app/immutable/entry/app.CWOPaAv5.js")
+						import("../_app/immutable/entry/start.C9Y7Fz64.js"),
+						import("../_app/immutable/entry/app.DoJl_UdN.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
