--- a/index.html
+++ b/index.html
@@ -73,19 +73,19 @@
 		<link href="./_app/immutable/assets/0.B9UqEcue.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/index.CV-KWLNP.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Toaster.DKF17Rty.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.C9Y7Fz64.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.ZgdasEvG.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.rpDdR-vj.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BF9v60Bs.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.DuFowCKh.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.D2ixOpOH.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DoJl_UdN.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.UbNakE_B.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.CbSI49Dz.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.CbyAYa5d.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DA8Hwdrt.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/language.Dl3xRKFZ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CiD0Xj7o.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Logo.W6KALgy-.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.D6NWd4VY.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Logo.9PNw4nMw.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.BPIpKGWN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Toaster.svelte_svelte_type_style_lang.C08CAFJi.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.B1LQHmQG.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.D7SVoox1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/chevron-left.COHjmkV2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/fetchTableData.CdaH9VLl.js">
 </head>
@@ -103,7 +103,7 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 			
 			<script>
 				{
-					__sveltekit_1ntek63 = {
+					__sveltekit_1owugkb = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -112,8 +112,8 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.C9Y7Fz64.js"),
-						import("./_app/immutable/entry/app.DoJl_UdN.js")
+						import("./_app/immutable/entry/start.rpDdR-vj.js"),
+						import("./_app/immutable/entry/app.UbNakE_B.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
