--- a/404.html
+++ b/404.html
@@ -70,11 +70,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.C9Y7Fz64.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.ZgdasEvG.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.rpDdR-vj.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BF9v60Bs.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.DuFowCKh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.D2ixOpOH.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.DoJl_UdN.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.UbNakE_B.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.CbSI49Dz.js">
 </head>
 
@@ -82,15 +82,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_1ntek63 = {
+					__sveltekit_1owugkb = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.C9Y7Fz64.js"),
-						import("/_app/immutable/entry/app.DoJl_UdN.js")
+						import("/_app/immutable/entry/start.rpDdR-vj.js"),
+						import("/_app/immutable/entry/app.UbNakE_B.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
