--- a/404.html
+++ b/404.html
@@ -70,27 +70,27 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.rpDdR-vj.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BF9v60Bs.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/utils.DuFowCKh.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.D2ixOpOH.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.UbNakE_B.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.CbSI49Dz.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BmXOELMn.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.B6CUlf7P.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.BJSJo82y.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.CxD1GuVX.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.Rk09YBBC.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.CpdznXbB.js">
 </head>
 
 <body data-sveltekit-preload-data="hover">
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_1owugkb = {
+					__sveltekit_1fcdamv = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.rpDdR-vj.js"),
-						import("/_app/immutable/entry/app.UbNakE_B.js")
+						import("/_app/immutable/entry/start.BmXOELMn.js"),
+						import("/_app/immutable/entry/app.Rk09YBBC.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
