--- a/404.html
+++ b/404.html
@@ -70,11 +70,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BmXOELMn.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.B6CUlf7P.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DJNs3Kuk.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.yANfAGRi.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.BJSJo82y.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.CxD1GuVX.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.Rk09YBBC.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.CXiwnjyv.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.CpdznXbB.js">
 </head>
 
@@ -82,15 +82,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_1fcdamv = {
+					__sveltekit_cwd5rp = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BmXOELMn.js"),
-						import("/_app/immutable/entry/app.Rk09YBBC.js")
+						import("/_app/immutable/entry/start.DJNs3Kuk.js"),
+						import("/_app/immutable/entry/app.CXiwnjyv.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
