--- a/debug/index.html
+++ b/debug/index.html
@@ -70,22 +70,22 @@
 	</script>
 
 	
-		<link href="../_app/immutable/assets/0.B9UqEcue.css" rel="stylesheet">
+		<link href="../_app/immutable/assets/0.DVqhylxu.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/index.CV-KWLNP.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/Toaster.DKF17Rty.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.BmXOELMn.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/entry.B6CUlf7P.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.DJNs3Kuk.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/entry.yANfAGRi.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-client.BJSJo82y.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.CxD1GuVX.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.Rk09YBBC.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.CXiwnjyv.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/disclose-version.CpdznXbB.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.DGsx9_Ew.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.C5X3qwkM.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/language.D5rYJVNv.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.BOQBKT7w.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/Logo.BTKnH4g2.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.CVVSQ9D5.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/Logo.BWUfE_YY.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.DTycqQVZ.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Toaster.svelte_svelte_type_style_lang.CmTlD-ve.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/3.D8gxhpB2.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/3.CzIqBFk1.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/fetchTableData.CPc8_iJS.js">
 </head>
 
@@ -102,15 +102,15 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 			
 			<script>
 				{
-					__sveltekit_1fcdamv = {
+					__sveltekit_cwd5rp = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("../_app/immutable/entry/start.BmXOELMn.js"),
-						import("../_app/immutable/entry/app.Rk09YBBC.js")
+						import("../_app/immutable/entry/start.DJNs3Kuk.js"),
+						import("../_app/immutable/entry/app.CXiwnjyv.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
