--- a/404.html
+++ b/404.html
@@ -80,10 +80,10 @@
 		</script>
 
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.DXKmArKq.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/8GgGcmXg.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.D5sd5EuX.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DymKv4TX.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CZbEYaIK.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.DFYYCGUm.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.DzneHWwM.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Cj9c95v1.js">
 	</head>
 
@@ -91,15 +91,15 @@
 		<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_1tnfzy = {
+					__sveltekit_nbn644 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.DXKmArKq.js"),
-						import("/_app/immutable/entry/app.DFYYCGUm.js")
+						import("/_app/immutable/entry/start.D5sd5EuX.js"),
+						import("/_app/immutable/entry/app.DzneHWwM.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
