--- a/debug/index.html
+++ b/debug/index.html
@@ -83,17 +83,17 @@
 		<link href="../_app/immutable/assets/0.BIlyEA6w.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/index.CV-KWLNP.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/Toaster.DKF17Rty.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.DXKmArKq.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/8GgGcmXg.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.D5sd5EuX.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/DymKv4TX.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CZbEYaIK.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.DFYYCGUm.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.DzneHWwM.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Cj9c95v1.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.yGvE8eH2.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.CALzQZqj.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CGg4dAkU.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/CuZugKTA.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/DMIMTcEc.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CiwZVYeg.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/D8CdFTqF.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/DsOmD_9r.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/D-agd_rs.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/3.DcEr8Ewm.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CtRk4yGp.js">
 	</head>
@@ -111,15 +111,15 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 			
 			<script>
 				{
-					__sveltekit_1tnfzy = {
+					__sveltekit_nbn644 = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("../_app/immutable/entry/start.DXKmArKq.js"),
-						import("../_app/immutable/entry/app.DFYYCGUm.js")
+						import("../_app/immutable/entry/start.D5sd5EuX.js"),
+						import("../_app/immutable/entry/app.DzneHWwM.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
