--- a/404.html
+++ b/404.html
@@ -80,10 +80,10 @@
 		</script>
 
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.KxQQMf0M.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BQXfm4sr.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.CMI7Yxnh.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/D4liQW96.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CZbEYaIK.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.lz0slkhX.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app._g03zWap.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Cj9c95v1.js">
 	</head>
 
@@ -91,15 +91,15 @@
 		<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_11t7fo5 = {
+					__sveltekit_yddx6e = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.KxQQMf0M.js"),
-						import("/_app/immutable/entry/app.lz0slkhX.js")
+						import("/_app/immutable/entry/start.CMI7Yxnh.js"),
+						import("/_app/immutable/entry/app._g03zWap.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
